# xhbx-rag

./: .dockerignore  .env.docker.example  .env.example  .env.mcp.example  .env.offline.example  .gitignore  .mcp.json  Dockerfile.api  README.md  docker-compose.mcp.yml  docker-compose.offline.yml  docker-compose.yml  pyproject.toml
dev/: Dockerfile.data  Kubernetes离线部署实施计划.md  Kubernetes离线部署文档.md  Kubernetes离线部署方案设计.md  import_k8s_images.sh  package_k8s_offline.sh
docs/: Web问答界面离线部署文档.md  docker-compose部署.md  知识库 MCP Tool 文档.md  私有化部署资源文档.md
scripts/: cases.txt  convert_legacy_formats.py  debug_mcp_search.sh  deploy_web_offline.sh  evaluation_workbook.mjs  index_parsed.sh  index_parsed_offline.sh  ingest_cases.sh  load_mcp_offline.sh  package_mcp_offline.sh  package_web_offline.sh  test_mcp.sh  verify_web_offline.sh
tests/: main_agent.py  test_a2a_routes.py  test_answer.py  test_atomic_indexer.py  test_chunk_builder.py  test_chunk_io.py  test_cli.py  test_cli_retrieval.py  test_cli_sales_generation.py  test_config.py  test_convert_legacy_formats_script.py  test_course_chunk_builder.py  test_course_enrichment.py  test_course_parser.py  test_directory_indexer.py  test_docker_deployment.py  test_embedding_rerank.py  test_evaluation_command.py  test_evaluation_dataset.py  test_evaluation_judge.py  test_evaluation_metrics.py  test_evaluation_models.py  test_evaluation_reporting.py  test_evaluation_runner.py  test_evaluation_workbook_integration.py  test_evidence_catalog.py  test_import.py  test_index_lock.py  test_indexer_search.py  test_ingest_cases_script.py  (+27 more)
(+193 files in other folders)
