[project]
name = "xhbx-rag"
version = "0.1.0"
description = "Sales insight parsing utilities for xhbx Agentic RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agentscope==2.0.3",
  "fastapi>=0.115",
  "httpx>=0.27",
  "mcp>=1.10",
  "pymilvus[milvus_lite]>=2.5",
  "pypdf>=6.14.2",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
  "python-pptx>=1.0.2",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
xhbx-rag = "xhbx_rag.cli:main"
xhbx-rag-mcp = "xhbx_rag.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
